# UkrGram

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
ukrgram/: __init__.py
ukrgram/automation/: __init__.py  engine.py  plugin_base.py
ukrgram/automation/plugins/: __init__.py  auto_reply.py  keyword_notifier.py
ukrgram/config/: __init__.py  settings.py
ukrgram/core/: __init__.py  auth.py  client.py  exceptions.py  resilience.py
ukrgram/gui/: __init__.py  application.py  auth.py  main_window.py  theme.py
ukrgram/gui/controllers/: __init__.py  app_controller.py
ukrgram/gui/widgets/: __init__.py  avatar.py  chat_view.py  dialog_list_item.py  message_bubble.py
ukrgram/models/: __init__.py  domain.py
ukrgram/services/: __init__.py  dialog_service.py  message_service.py
ukrgram/utils/: __init__.py  logger.py
